Update Feedback section and Legal Notice
git-svn-id: file:///srv/svn/publican/trunk@1785 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/as-IN/Feedback.po
+++ b/publican-jboss/as-IN/Feedback.po
@@ -1,23 +1,64 @@
 # translation of Feedback.po to Assamese
 # Amitakhya Phukan <aphukan@fedoraproject.org>, 2007.
+# Amitakhya Phukan <aphukan@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-30 17:35+0530\n"
-"Last-Translator: Amitakhya Phukan <aphukan@fedoraproject.org>\n"
-"Language-Team: Assamese\n"
-"Language: \n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-03-02 12:07+0530\n"
+"Last-Translator: Amitakhya Phukan <aphukan@redhat.com>\n"
+"Language-Team: Assamese <>\n"
+"Language: as\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n!=1)\n"
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "সহায় পোৱা আৰু মতামত দিয়া"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "আপোনাক সহায় লাগে নেকি ?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr ""
+
+#. Tag: para
+#, fuzzy, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "এই আলেখ্যনত দিয়া পদক্ষেপবোৰত কোনো অসুবিধা পালে, আপুনি এই ধৰণেৰে সহায় পাব পাৰে:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr ""
+
+#. Tag: para
+#, fuzzy, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat Global Support Services"
+
+#. Tag: para
+#, fuzzy, no-c-format
+msgid "access other product documentation."
+msgstr "অন্য Red Hat আলেখ্যনসমূহ"
+
+#. Tag: para
+#, fuzzy, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat চালনাজ্ঞান আৰু প্ৰযুক্তিবিদ্যাৰ আলোচনাৰ বাবে Red Hat ত বহুতো ইলেক্ট্ৰনিক পত্ৰপ্ৰেৰণ তালিকা আছে । গনসাধাৰণৰ কাৰণে উপলব্ধ তালিকাসমূহ আপুনি <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> ত পাব পাৰে । যিকোনো তালিকালৈ বৰঙনি দিবলৈ বা তাৰ চিৰস্তা অভিগম কৰিবলৈ তাত ক্লিক কৰক ।"
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "আমাক মতামতৰ প্ৰয়োজন!"
 
 #. Tag: indexterm
@@ -27,18 +68,68 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "এই হাতপুথিত আপুনি অক্ষৰমূদ্ৰণৰ ভুল পালে, বা এই হাতপুথি আৰু উন্নত কৰিবৰ বাবে কোনো দিশ পালে, আমি আপোনাৰ মতামত পাবলৈ ভাল পাম! Bugzilla ত এটা বৰ্ণনা নথিভূক্ত কৰক: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>  <application>&PRODUCT;</application> ৰ বিৰুদ্ধে ।"
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "বাগৰ প্ৰতিবেদন দিওঁতে, হাতপুথিৰ চিনাক্তকাৰীক উল্লেখ কৰিবলৈ মনত ৰাখিব: <citetitle>&BOOKID;</citetitle>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "এই আলেখ্যন উন্নত কৰিবলৈ আপোনাৰ কোনো চিন্তা থাকিলে, তাৰ বিৱৰণত যিমান পাৰে বিতং হ'ব । আপুনি কোনো ভুল পালে, অনুগ্ৰহ কৰি বিভাৰ নম্বৰ আৰু তাৰ ওচৰৰ কিছু লিপি অন্তৰ্ভুক্ত কৰিব যাতে আমি সহজে বিচাৰিব পাৰোঁ ।"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
+
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "এই হাতপুথিত আপুনি অক্ষৰমূদ্ৰণৰ ভুল পালে, বা এই হাতপুথি আৰু উন্নত কৰিবৰ বাবে কোনো দিশ পালে, আমি আপোনাৰ মতামত পাবলৈ ভাল পাম! Bugzilla ত এটা বৰ্ণনা নথিভূক্ত কৰক: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>  <application>&PRODUCT;</application> ৰ বিৰুদ্ধে ।"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "বাগৰ প্ৰতিবেদন দিওঁতে, হাতপুথি&#39;ৰ চিনাক্তকাৰীক উল্লেখ কৰিবলৈ মনত ৰাখিব: <citetitle>&BOOKID;</citetitle>"
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "এই আলেখ্যন উন্নত কৰিবলৈ আপোনাৰ কোনো চিন্তা থাকিলে, তাৰ বিৱৰণত যিমান পাৰে বিতং হ'ব । আপুনি কোনো ভুল পালে, অনুগ্ৰহ কৰি বিভাৰ নম্বৰ আৰু তাৰ ওচৰৰ কিছু লিপি অন্তৰ্ভুক্ত কৰিব যাতে আমি সহজে বিচাৰিব পাৰোঁ ।"
+
+#~ msgid "help"
+#~ msgstr "সহায়"
+
+#~ msgid "getting help"
+#~ msgstr "সহায় পোৱা"
+
+#~ msgid "Red Hat Knowledgebase"
+#~ msgstr "Red Hat Knowledgebase"
+
+#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
+#~ msgstr "Red Hat ৰ উৎপাদনসমূহৰ বিষয়ে প্ৰযুক্তিগত সমৰ্থন বিচাৰিবলৈ বা চৰণ কৰিবলৈ <ulink url=\"http://kbase.redhat.com\"></ulink> ত Red Hat Knowledgebase চাওক ।"
+
+#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
+#~ msgstr "আপোনাৰ Red Hat ৰ বৰঙনিয়ে আপোনাক Red Hat Global Support Services (GSS) ৰ সমৰ্থন পাবলৈ সক্ষম কৰে । GSS ৰ পৰা সহায় পোৱাৰ অধিক তথ্যৰ বাবে <ulink url=\"http://support.redhat.com\"></ulink> চাওক ।"
+
+#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
+#~ msgstr "<ulink url=\"http://www.redhat.com/docs\"></ulink> ত Red Hat ৰ অন্য আলেখ্যনসমূহ পাওক"
+
+#~ msgid "Red Hat electronic mailing lists"
+#~ msgstr "Red Hat ইলেক্ট্ৰনিক পত্ৰপ্ৰেৰণ তালিকাসমূহ"
 
 #~ msgid "feedback"
 #~ msgstr "মতামত"
