--- a/publican-jboss/ko-KR/Feedback.po
+++ b/publican-jboss/ko-KR/Feedback.po
@@ -1,12 +1,13 @@
 # translation of Feedback.po to Korean
 # Eunju Kim <eukim@redhat.com>, 2007.
+# Hyunsok Oh <hoh@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-23 00:12+1000\n"
-"Last-Translator: Eunju Kim <eukim@redhat.com>\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-03-05 14:55+1000\n"
+"Last-Translator: Hyunsok Oh <hoh@redhat.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
@@ -16,34 +17,115 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "도움 받기와 피드백 제공하기"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "도움이 필요하십니까?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>도움</primary> <secondary>도움 받기</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "만약 이 문서에 설명된 절차를 수행할 때 문제를 겪는다면, Red Hat 고객 포털(<ulink url=\"http://access.redhat.com\"/>)을 방문하십시오. 포털에는 다음과 같은 것이 가능합니다:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "Red Hat 제품에 대한 기술 지원 지식베이스를 검색하거나 살펴보기."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat 글로벌 지원 서비스(GSS)에 지원 요청하기"
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "다른 제품 문서 살펴보기"
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat은 또한 Red Hat 소프트웨어와 기술에 대해 논의하는 수많은 전자 메일 리스트를 호스트하고 있습니다. 공개된 리스트 목록은 <ulink url=\"https://www.redhat.com/mailman/listinfo\"/>에 있습니다. 리스트에 가입하거나 리스트 아카이브를 보시려면 원하는 메일 리스트의 이름을 클릭하십시오."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "피드백을 보내주시기 바랍니다!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>피드백</primary> <secondary>이 메뉴얼에 대한 연락처</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "문서 내용 개선을 위한 제안이 있거나 오자를 발견했을 경우 언제든지 알려 주시기 바랍니다. <application>&PRODUCT;.</application>에 대한 리포트를 버그질라(Bugzilla)로 제출해 주시면 됩니다: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "버그 리포트를 제출하실 때, 메뉴얼의 분류 번호를 알려주시기 바랍니다: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "문서 내용 개선을 위한 제안이 있으실 경우, 최대한 명확히 설명해 주시기 바랍니다. 오류를 발견하셨다면 저희가 쉽게 식별할 수 있도록 섹션 번호와 주위의 문장들을 함께 보내주시기 바랍니다."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "문서 내용 개선을 위한 제안이 있거나 오자를 발견했을 경우 언제든지 알려 주시기 바랍니다. <application>&PRODUCT;.</application>에 대한 리포트를 버그질라(Bugzilla)로 제출해 주시면 됩니다: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "버그 리포트를 제출하실 때, 메뉴얼의 분류 번호를 알려주시기 바랍니다: <citetitle>&BOOKID;</citetitle>"
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "문서 내용 개선을 위한 제안이 있으실 경우, 최대한 구체적으로 설명해 주시기 바랍니다. 오류를 발견하셨다면 저희가 쉽게 식별할 수 있도록 섹션 번호와 주위의 문장들을 함께 보내주시기 바랍니다."
+
+#~ msgid "Red Hat Knowledgebase"
+#~ msgstr "Red Hat 지식베이스"
+
+#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
+#~ msgstr "<ulink url=\"http://kbase.redhat.com\"></ulink>의 Red Hat 지식베이스를 방문해서 Red Hat에서 제공하는 기술 지원 문서를 검색하거나 살펴보실 수 있습니다."
+
+#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
+#~ msgstr "여러분의  Red Hat 서브스크립션은 Red Hat 글로벌 지원 서비스(GSS,Global Support Service)을 가능하게 합니다. <ulink url=\"http://support.redhat.com\"></ulink>를 방문해서 GSS로부터 도움을 받는 방법에 대한 정보를 살펴보십시오."
+
+#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
+#~ msgstr "다른 Red Hat문서를 <ulink url=\"http://www.redhat.com/docs\"></ulink>에서 보실 수 있습니다."
+
+#~ msgid "Red Hat electronic mailing lists"
+#~ msgstr "Red Hat 전자 메일 리스트"
 
 #~ msgid "feedback"
 #~ msgstr "피드백"
 
 #~ msgid "contact information for this manual"
 #~ msgstr "연락처"
-
-#~ msgid "translator-credits"
-#~ msgstr "김은주 (eukim@redhat.com), 2006, 2007"
