--- a/publican-jboss/or-IN/Feedback.po
+++ b/publican-jboss/or-IN/Feedback.po
@@ -1,52 +1,141 @@
 # translation of Feedback.po to Oriya
 # Subhransu Behera <arya_subhransu@yahoo.co.in>, 2007.
+# Manoj Kumar Giri <mgiri@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-11-06 18:13+0530\n"
-"Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
-"Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-31 13:10+0530\n"
+"Last-Translator: \n"
+"Language-Team: Oriya <oriya-it@googlegroups.com>\n"
 "Language: or\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms:  nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 "\n"
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "ସହାୟତା ନେବା ଏବଂ ମତାମତ ପ୍ରଦାନ କରିବା"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "ଆପଣ ସାହାଯ୍ୟ ଆବଶ୍ୟକ କରୁଛନ୍ତି କି?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>ସହାୟତା</primary> <secondary>ସହାୟତା ନେଉଅଛି</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "ଯଦି ଆପଣ ଏହି ଦଲିଲରେ ବର୍ଣ୍ଣନା କରାଯାଇଥିବା ପଦ୍ଧତିରେ କୌଣସି ଅସୁବାଧିର ସମ୍ମୁଖିନ ହୁଅନ୍ତି, ତେବେ ଆପଣ <ulink url=\"http://access.redhat.com\" /> ରେ ଥିବା Red Hat ଗ୍ରାହକ ପୃଷ୍ଠାକୁ ପରିଦର୍ଶନ କରନ୍ତୁ। ଏହି ଗ୍ରାହକ ପୃଷ୍ଠା ମାଧ୍ଯମରେ, ଆପଣ ନିମ୍ନଲିଖିତ ଉପାୟରେ ସହାୟତା ପାଇପାରିବେ:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "Red Hat ଉତ୍ପାଦନଗୁଡ଼ିକ ବିଷୟରେ ଯାନ୍ତ୍ରିକ ସହାୟତା ପାଇଁ ଜ୍ଞାନ ଆଧାର ମାଧ୍ଯମରେ ସନ୍ଧାନ କରନ୍ତୁ କିମ୍ବା ବ୍ରାଉଜ କରନ୍ତୁ।"
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat ସାମଗ୍ରିକ ସମର୍ଥନ ସର୍ଭିସଗୁଡ଼ିକ (GSS) ରେ ଗୋଟିଏ ସମର୍ଥନ ଦାଖଲ କରନ୍ତୁ।"
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "ଅନ୍ୟାନ୍ୟ ଉତ୍ପାଦନ ଦଲିଲିକରଣକୁ ଅଭିଗମ୍ୟ କରନ୍ତୁ।"
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat ଅନେକ ଇଲେକ୍ଟ୍ରୋନିକ ମେଲିଙ୍ଗ ତାଲିକାଗୁଡ଼ିକୁ Red Hat ସଫ୍ଟୱେର ଏବଂ ପ୍ରଯୁକ୍ତି ବିଜ୍ଞାନ ବିଷୟରେ ଆଲୋଚନା କରିବା ପାଇଁ ହୋଷ୍ଟ କରିଥାଏ। ଆପଣ ସର୍ବସାଧାରଣ ପାଇଁ ଉପଲବ୍ଧ ତାଲିକାଗୁଡ଼ିକର ଗୋଟିଏ ତାଲିକା <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> ରେ ପାଇପାରିବେ। ଯେକୌଣସି ତାଲିକାର ଗୋଟିଏ ନାମ ଉପରେ କ୍ଲିକ କରି ସେହି ତାଲିକାରେ ସଦସ୍ୟତା ପାଇପାରିବେ ଅଥବା ତାଲିକା ଅଭିଲେଖଗୁଡ଼ିକୁ ଅଭିଗମ୍ୟ କରିପାରିବେ।"
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "ଆମେ ପ୍ରତିକ୍ରିୟା ଆବଶ୍ଯକ କରୁଅଛୁ!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>feedback</primary> <secondary>ଏହି ହସ୍ତପୁସ୍ତକ ପାଇଁ ସମ୍ପର୍କଗୁଡ଼ିକର ସୂଚନା</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଆପଣଙ୍କ ନିକଟରେ କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ ଚାହିଁବୁ! ଦୟାକରି <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> କୁ ଯାଇ ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦିଅନ୍ତୁ।"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦେବା ସମୟରେ, ମେନ୍ଯୁଆଲର ପରିଚୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ନିଶ୍ଚିତ ହୁଅନ୍ତୁ:<citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr " ଆପଣଙ୍କ ନିକଟରେ ଦଲିଲକୁ ଉନ୍ନତ କରିବା ପାଇଁ କୌଣସି ପ୍ରସ୍ତା ଥିଲେ, ଏହାକୁ ବର୍ଣ୍ଣନା କରିବା ସମୟରେ ଯେତେ ସମ୍ଭବ ସେତେ ସ୍ପଷ୍ଟ ଭାବରେ ଏହାକୁ ବ୍ଯାଖ୍ଯା କରିବା ପାଇଁ ଚେଷ୍ଟା କରନ୍ତୁ। ଆପଣ ଗୋଟିଏ ତୃଟି ପାଇଥିଲେ, ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ ତାହାକୁ ସହଜରେ ପାଇପାରିବୁ। "
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଆପଣଙ୍କ ନିକଟରେ କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ ଚାହିଁବୁ! ଦୟାକରି <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> କୁ ଯାଇ ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦିଅନ୍ତୁ।"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦାଖଲ କରିବା ସମୟରେ, ହସ୍ତପୁସ୍ତକ&#39;s ପରିଚାୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ସୁନିଶ୍ଚିତ କରନ୍ତୁ:<citetitle>&BOOKID;</citetitle>"
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr " ଆପଣଙ୍କ ନିକଟରେ ଦଲିଲକୁ ଉନ୍ନତ କରିବା ପାଇଁ କୌଣସି ପ୍ରସ୍ତା ଥିଲେ, ଏହାକୁ ବର୍ଣ୍ଣନା କରିବା ସମୟରେ ଯେତେ ସମ୍ଭବ ସେତେ ସ୍ପଷ୍ଟ ଭାବରେ ଏହାକୁ ବ୍ଯାଖ୍ଯା କରିବା ପାଇଁ ଚେଷ୍ଟା କରନ୍ତୁ। ଆପଣ ଗୋଟିଏ ତୃଟି ପାଇଥିଲେ, ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ ତାହାକୁ ସହଜରେ ପାଇପାରିବୁ। "
+
+#~ msgid "help"
+#~ msgstr "ସହାୟତା"
+
+#~ msgid "getting help"
+#~ msgstr "ସାହାଯ୍ୟ ନେଉଅଛି"
+
+#~ msgid "Red Hat Knowledgebase"
+#~ msgstr "Red Hat Knowledgebase"
+
+#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
+#~ msgstr "Red Hat ଉତ୍ପାଦନଗୁଡ଼ିକ ବିଷୟରେ ପାରିଭାଷିକ ସମର୍ଥନ ପତ୍ରିକାଗୁଡ଼ିକରେ ସନ୍ଧାନ ଏବଂ ବ୍ରାଉଜ କରିବା ପାଇଁ Red Hat Knowledgebase କୁ <ulink url=\"http://kbase.redhat.com\"></ulink> ରେ ପରିଦର୍ଶନ କରନ୍ତୁ।"
+
+#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
+#~ msgstr "ଆପଣଙ୍କର Red Hat ଗ୍ରାହକ ଶୁଳ୍କରେ Red Hat ସାମଗ୍ରିକ ସମର୍ଥନ ସର୍ଭିସଗୁଡ଼ିକ ଅନ୍ତର୍ଭୁକ୍ତ (GSS). GSS ରୁ ସହାୟତା ପାଇବା ବିଷୟରେ ଅଧିକ ସୂଚନା ପାଇବା ପାଇଁ <ulink url=\"http://support. redhat.com\"></ulink> କୁ ପରିଦର୍ଶନ କରନ୍ତୁ।"
+
+#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
+#~ msgstr "ଅନ୍ୟାନ୍ୟ Red Hat ଦଲିଲିକରଣକୁ <ulink url=\"http://www.redhat.com/docs\"></ulink> ଠାରେ ଅଭିଗମ୍ୟ କରନ୍ତୁ "
+
+#~ msgid "Red Hat electronic mailing lists"
+#~ msgstr "Red Hat ଇଲେକ୍ଟ୍ରୋନିକ ମେଲିଙ୍ଗ ତାଲିକାଗୁଡ଼ିକ"
 
 #~ msgid "feedback"
 #~ msgstr "ପ୍ରତିକ୍ରିୟା"
 
 #~ msgid "contact information for this manual"
 #~ msgstr "ଏହି ମେନ୍ଯୁଆଲ ପାଇଁ ଯୋଗାଯୋଗ ସୂଚନା"
-
-#~ msgid "translator-credits"
-#~ msgstr "ଶୁଭ୍ରାଂଶୁ ବେହେରା <arya_subhransu@yahoo.co.in>"
