--- a/publican-jboss/de-DE/Feedback.po
+++ b/publican-jboss/de-DE/Feedback.po
@@ -1,13 +1,12 @@
 # translation of Feedback.po to
-# PGP-KeyID: 0x037FD3CF <ttrinks@redhat.com>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-22 09:45+1000\n"
-"Last-Translator: PGP-KeyID: 0x037FD3CF <ttrinks@redhat.com>\n"
-"Language-Team:  <de@li.org>\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-13 09:42+1000\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,34 +15,94 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "Hilfe bekommen und Feedback geben"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "Brauchen Sie Hilfe?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>Hilfe</primary> <secondary>Hilfe bekommen</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "Falls Sie Schwierigkeiten mit einer der in diesem Handbuch beschriebenen Prozeduren haben, besuchen Sie das Red Hat Kundenportal unter <ulink url=\"http://access.redhat.com\" />. Via Kundenportal können Sie:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "eine Knowledgebase bestehend aus Artikeln rund um technischen Support für Red Hat Produkte durchsuchen oder zu durchstöbern."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "einen Support-Case bei Red Hat Global Support Services (GSS) einreichen."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "auf weitere Produktdokumentationen zugreifen."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat unterhält außerdem eine Vielzahl von Mailing-Listen zur Diskussion über Red Hat Software und Technologie. Eine Übersicht der öffentlich verfügbaren Listen finden Sie unter <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Klicken Sie auf den Namen einer Liste für weitere Einzelheiten zum Abonnieren dieser Liste oder um auf deren Archiv zuzugreifen."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "Wir freuen uns auf Ihr Feedback!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>Feedback</primary> <secondary>Kontaktinformationen für dieses Handbuch</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "Wenn Sie einen Fehler in diesem Handbuch finden oder eine Idee haben, wie dieses verbessert werden könnte, freuen wir uns über Ihr Feedback! Reichen Sie einen Fehlerbericht für die Komponente <application>&PRODUCT;.</application> in Bugzilla unter <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> ein."
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "Vergewissern Sie sich beim Einreichen eines Fehlerberichts die Kennung des Handbuchs mit anzugeben: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Falls Sie uns einen Vorschlag zur Verbesserung der Dokumentation senden möchten, sollten Sie hierzu möglichst genaue Angaben machen. Wenn Sie einen Fehler gefunden haben, geben Sie bitte die Nummer des Abschnitts und einen Ausschnitt des Textes an, damit wir diesen leicht finden können."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "Wenn Sie einen Fehler in diesem Handbuch finden oder eine Idee haben, wie dieses verbessert werden könnte, freuen wir uns über Ihr Feedback! Reichen Sie einen Fehlerbericht für die Komponente <application>&PRODUCT;</application> in Bugzilla unter <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> ein."
 
-#~ msgid "feedback"
-#~ msgstr "Feedback"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "Vergewissern Sie sich beim Einreichen eines Fehlerberichts, dass Sie die Kennung des Handbuchs mit angeben: <citetitle>&BOOKID;</citetitle>"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "Kontaktinformationen für dieses Handbuch"
-
-#~ msgid "translator-credits"
-#~ msgstr "N/A"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "Falls Sie uns einen Vorschlag zur Verbesserung der Dokumentation senden möchten, sollten Sie hierzu möglichst genaue Angaben machen. Wenn Sie einen Fehler gefunden haben, geben Sie bitte die Nummer des Abschnitts und einen Ausschnitt des Textes an, damit wir diesen leicht finden können."
