--- a/publican-jboss/fr-FR/Feedback.po
+++ b/publican-jboss/fr-FR/Feedback.po
@@ -1,14 +1,15 @@
 # translation of Feedback.po to French
 # Decroux Fabien <fdecroux@redhat.com>, 2007.
+# Sam Friedmann <sam.friedmann@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-23 11:01+1000\n"
-"Last-Translator: Decroux Fabien <fdecroux@redhat.com>\n"
-"Language-Team: French <fr@li.org>\n"
-"Language: fr\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-23 12:14+1000\n"
+"Last-Translator: Sam Friedmann <sam.friedmann@redhat.com>\n"
+"Language-Team: French <French fedora-trans-fr@fedoraproject.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,34 +17,94 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "Obtenir de l'aide et faire des commentaires"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "Avez-vous besoin d'aide ?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>aide</primary> <secondary>obtenir de l'aide</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "Si vous rencontrez des difficultés avec l'une des procédures décrites dans cette documentation, veuillez visiter le Portail Client Red Hat sur <ulink url=\"http://access.redhat.com\" />. Sur le portail client, vous pourrez :"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "effectuer des recherches ou naviguer sur la base de connaissances d'articles de support techniques concernant les produits Red Hat."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "soumettre une requête de support au service de support global Red Hat (GSS)."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "accéder aux documents des autres produits de Red Hat."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat est l'hôte de nombreuses listes de diffusion traitant de ses logiciels et technologies. Vous trouverez un ensemble des listes de diffusion disponibles au public sur <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Cliquez sur le nom d'une liste pour vous inscrire à celle-ci ou pour accéder à ses archives."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "Vos commentaires sont importants&nbsp;!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>feedback</primary> <secondary>informations de contact de ce manuel</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>) pour le produit <application>&PRODUCT;.</application>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "Lorsque vous soumettez un rapport d'erreurs, veuillez indiquer clairement les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Si vous avez des suggestions pour améliorer la documentation, essayez de les décrire le plus précisément possible. Si vous avez trouvé une erreur, veuillez non seulement indiquer le numéro de section où elle se trouve mais également ajouter un extrait du texte qui l'entoure, afin que nous puissions la retrouver facilement."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>) pour le produit <application>&PRODUCT;.</application>"
 
-#~ msgid "feedback"
-#~ msgstr "commentaires"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "Lorsque vous soumettez un rapport de bogues, veuillez indiquer clairement les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "coordonnées pour ce manuel"
-
-#~ msgid "translator-credits"
-#~ msgstr "translator-credits"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "Si vous avez des suggestions pour améliorer la documentation, essayez de les décrire le plus précisément possible. Si vous avez trouvé une erreur, veuillez non seulement indiquer le numéro de section où elle se trouve mais également ajouter un extrait du texte qui l'entoure, afin que nous puissions la retrouver facilement."
