--- a/publican-jboss/hi-IN/Feedback.po
+++ b/publican-jboss/hi-IN/Feedback.po
@@ -1,14 +1,14 @@
 # translation of Feedback.po to Hindi
-# Rajesh Ranjan <rranjan@redhat.com>, 2007.
+# Rajesh Ranjan <rranjan@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-30 13:16+0530\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-31 15:25+0530\n"
 "Last-Translator: Rajesh Ranjan <rranjan@redhat.com>\n"
-"Language-Team: Hindi <hindi.sf.net>\n"
-"Language: hi\n"
+"Language-Team: Hindi <fedora-trans-hi@redhat.com>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,37 +16,99 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "\n"
 "\n"
+"\n"
+"\n"
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "मदद पाएँ और फ़ीडबैक दें"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "क्या आपको मदद चाहिए?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>मदद</primary> <secondary>मदद लें</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "यदि आप इस दस्तावेज़ीकरण में वर्णित किसी प्रक्रिया से कोई परेशानी अनुभव करते हैं, तो Red Hat ग्राहक पोर्टल को <ulink url=\"http://access.redhat.com\" /> पर देखें. ग्राहक पोर्टल से होकर आप कर सकते हैं:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "Red Hat उत्पाद के बारे में तकनीकी समर्थन आलेखों के नॉलेजबेस से होकर खोजें या ब्राउज़ करें."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat ग्लोबल सपोर्ट सर्विस (GSS) में सपोर्ट केस रखें."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "अन्य उत्पाद दस्तावेज़ीकरण की पहुँच लें."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat कई इलेक्ट्रॉनिक मेलिंग सूची को Red Hat सॉफ़्टवेयर और प्रौद्योगिकी की चर्चा के लिए होस्ट करती है. आप सार्वजनिक रूप से उपलब्ध सूची को <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> पर पा सकते हैं. सूची की सदस्यता लेने या सूची अभिलेख की पहुँच के लिए किसी सूची के नाम पर क्लिक करें."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "हमें फीडबैक की जरूरत है!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>फ़ीडबैक</primary> <secondary>इस मैनुअल के लिए संपर्क सूचना</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "यदि आप इस मैनुअल में टाइप की कोई गलती पाते हैं, या आपने इस मैनुअल को बेहतर बनाने का कोई तरीका सोचा है, हम आपकी राय जानना चाहेंगे! कृपया बगजिला में एक रिपोर्ट दर्ज करें: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> <application>&PRODUCT;.</application> उत्पाद के लिए."
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "जब आप एक बग रिपोर्ट सुपुर्द करते हैं, मैनुअल पहचानकर्ता का उल्लेख करना सुनिश्चित करें: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "यदि आपके पास दस्तावेजीकरण में सुधार करने के लिए कोई सलाह है, यथा संभव इसे निर्दिष्ट करने की कोशिश करें. यदि आपने कोई त्रुटि पाई है, कृपया खंड संख्या और कुछ जुड़े पाठ शामिल करें ताकि हम इसे आसानी से पता कर सकें."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "यदि आप इस मैनुअल में टाइप की कोई गलती पाते हैं, या आपने इस मैनुअल को बेहतर बनाने का कोई तरीका सोचा है, हम आपकी राय जानना चाहेंगे! कृपया बगजिला में एक रिपोर्ट दर्ज करें: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> <application>&PRODUCT;.</application> उत्पाद के लिए."
 
-#~ msgid "feedback"
-#~ msgstr "फीडबैक"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "जब आप एक बग रिपोर्ट सुपुर्द करते हैं, मैनुअल के पहचानकर्ता का उल्लेख करना सुनिश्चित करें: <citetitle>&BOOKID;</citetitle>"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "इस मैनुअल के लिए संपर्क सूचना"
-
-#~ msgid "translator-credits"
-#~ msgstr "Rajesh Ranjan (rranjan@redhat.com)"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "यदि आपके पास दस्तावेजीकरण में सुधार करने के लिए कोई सलाह है, यथा संभव इसे निर्दिष्ट करने की कोशिश करें. यदि आपने कोई त्रुटि पाई है, कृपया खंड संख्या और कुछ जुड़े पाठ शामिल करें ताकि हम इसे आसानी से पता कर सकें."
