--- a/publican-jboss/it-IT/Feedback.po
+++ b/publican-jboss/it-IT/Feedback.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-23 12:28+1000\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-03-01 15:41+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
 "Language: \n"
@@ -15,34 +15,121 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "Come ottenere assistenza ed inviare commenti"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "Avete bisogno di aiuto?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>aiuto</primary> <secondary>come ottenere aiuto</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "Se avete incontrato delle difficoltà con una procedura descritta in questa documentazione visitate il Portale clienti di Red Hat su <ulink url=\"http://access.redhat.com\" />. Attraverso il portale clienti potrete:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "andate alla ricerca attraverso un knowledgebase degli articoli di supporto tecnico relativi ai prodotti di Red Hat"
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "inviate una richiesta di supporto al Red Hat Global Support Services (GSS)."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "accesso documentazione di un altro prodotto"
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat presenta un gran numero di mailing list elettroniche per la discussione sulle tecnologie e sul software di Red Hat. È possibile trovare un elenco di liste pubbliche disponibili su <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Fate clic sul nome della lista desiderata per eseguire la registrazione ad accedere ai relativi archivi."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "Inviateci i vostri commenti!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>feedback</primary> <secondary>informazioni di contatto per questo manuale</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "Se individuate degli errori di battitura in questo manuale, o se pensate di poter contribuire al suo miglioramento, contattateci subito! Inviate i vostri suggerimenti tramite Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> sul componente <application>&PRODUCT;.</application>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "Quando inviate un bug report, assicuratevi di indicare l'identificatore del manuale: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Se inviate un suggerimento per contribuire al miglioramento della guida, cercate di essere il più specifici possibile. Se avete individuato un errore, indicate il numero della sezione e alcune righe di testo, in modo da agevolare la ricerca dell'errore."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "Se individuate degli errori di battitura in questo manuale, o se pensate di poter contribuire al suo miglioramento, contattateci subito! Inviate i vostri suggerimenti tramite Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> sul componente <application>&PRODUCT;.</application>"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "Quando inviate un bug report assicuratevi di indicare l'identificatore del manuale: <citetitle>&BOOKID;</citetitle>"
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "Se inviate un commento per contribuire al miglioramento della guida, cercate di essere il più specifici possibile. Se avete individuato un errore, indicate il numero della sezione e alcune righe di testo, in modo da agevolare la ricerca dell'errore."
+
+#~ msgid "help"
+#~ msgstr "aiuto"
+
+#~ msgid "getting help"
+#~ msgstr "come ottenere assistenza"
+
+#~ msgid "Red Hat Knowledgebase"
+#~ msgstr "Red Hat Knowledgebase"
+
+#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
+#~ msgstr "Visitate il Red Hat Knowledgebase su <ulink url=\"http://kbase.redhat.com\"></ulink> per trovare o consultare gli articoli di supporto tecnico relativi ai prodotti di Red Hat."
+
+#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
+#~ msgstr "La sottoscrizione a Red Hat conferisce il diritto al supporto da parte del Red Hat Global Support Services (GSS). Consultare <ulink url=\"http://support.redhat.com\"></ulink> per maggiori informazioni su come ottenere l'assistenza dal GSS."
+
+#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
+#~ msgstr "Accedete ad altre documentazioni di Red Hat su <ulink url=\"http://www.redhat.com/docs\"></ulink>"
+
+#~ msgid "Red Hat electronic mailing lists"
+#~ msgstr "Mailing list elettroniche di Red Hat"
 
 #~ msgid "feedback"
 #~ msgstr "commento"
 
 #~ msgid "contact information for this manual"
 #~ msgstr "informazioni di contatto per questo manuale"
-
-#~ msgid "translator-credits"
-#~ msgstr "crediti-traduttore"
