--- a/publican-jboss/mr-IN/Feedback.po
+++ b/publican-jboss/mr-IN/Feedback.po
@@ -1,51 +1,111 @@
-# translation of Feedback.po to marathi
+# translation of Feedback.po to Marathi
 # sandeep shedmake <sandeep.shedmake@gmail.com>, 2007.
+# Sandeep Shedmake <sshedmak@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-29 16:38+0530\n"
-"Last-Translator: sandeep shedmake <sandeep.shedmake@gmail.com>\n"
-"Language-Team: marathi\n"
-"Language: \n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-31 17:09+0530\n"
+"Last-Translator: Sandeep Shedmake <sshedmak@redhat.com>\n"
+"Language-Team: Marathi <fedora-trans-mr@redhat.com>\n"
+"Language: mr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
-msgstr "आम्हाला माघारी वृत पाठवा!"
+msgid "Getting Help and Giving Feedback"
+msgstr "मदत प्राप्ति व प्रतिसाद देणे"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "मदत हवी आहे?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>मदत</primary> <secondary>मदत प्राप्ति</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "या दस्तऐवजातील वर्णनीकृत पद्धतीसह अडचण आढळल्यास, Red Hat ग्राहक पोर्टल <ulink url=\"http://access.redhat.com\" /> येथे भेट द्या. ग्राहक पोर्टलद्वारे, तुम्ही खालील करू शकता:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "Red Hat उत्पादनांविषयी टेकनिकल सोपर्ट लेखांद्वारे, शोध किंवा संचारन करा."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat Global Support Services (GSS) येथे सपोर्ट केस सादर करा."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "इतर उत्पादन दस्तऐवजीकरणकरीता प्रवेश."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat सॉफ्टवेअर व तंत्रज्ञाणविषयी चर्चाकरीता Red Hat अनेक इलेक्ट्रॉनीक मेलिंग लिस्टस् आयोजीत करतो. <ulink url=\"https://www.redhat.com/mailman/listinfo\"/> येथे तुम्हाला पब्लिक लिस्टस् आढळतील. ठराविक लिस्टकरीता सबस्क्राइब होण्यासाठी किंवा लिस्ट आर्काइव्हस् च्या प्रवेशसाठी लिस्ट नावावर क्लिक करा."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
+msgstr "आम्हाला प्रतिसाद पाठवा!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>प्रतिसाद</primary> <secondary>या नियमावली संपर्क माहिती</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "टायपोग्राफी संबंधी त्रुटी आढळल्यास, किंवा ह्या पुस्तिकेला आणखी चांगले बनविण्याकरीता, आपले विचार आमच्यापर्यंत पोहचवा! कृपया अहवाल Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> येथे उत्पादना <application>&PRODUCT;.</application> विरूद्ध करा"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "दोषरहीत अहवाल सादर करतेवेळी, पुस्तिकेचे ओळखकार <citetitle>&BOOKID;</citetitle> विषयी उल्लेख जरूर करा"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "आपल्याकडे दस्ताऐवजीकरण उन्नत करण्याकरीता काही उपदेश असल्यास, स्पष्टपणे त्या सांगावेत. काही त्रुटी आढळल्यास, कृपया सत्र क्रमांक व काहीक भवतालीचे मजकुर पाठवावे ज्यामुळे पटकण समस्या शोधण्यास आम्हाला मदत मिळेल."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "या नियमावलीत टायपोग्राफि संबंधित त्रुटी आढळल्यास, किंवा नियमावलीला अधिक उत्तम बनवायचे विचार असल्यास, आम्हाला ते जरूर कळवा! कृपया Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> येथे उत्पादन <application>&PRODUCT;.</application> विरूद्ध अहवाल पाठवा"
 
-#~ msgid "feedback"
-#~ msgstr "माघारी वृत"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "बग अहवाल सादर करतेवेळी, नियमावलीचे आयडेंटीफायर निर्देशीत करायची खात्री करा: <citetitle>&BOOKID;</citetitle>"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "ह्या पुस्तिकेकरीता संपर्क माहिती"
-
-#~ msgid "translator-credits"
-#~ msgstr "sandeep shedmake <sshedmak@redhat.com> 2007"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "दस्ताऐवजीकरण सुधारित करण्यासाठी काहिक उपदेश असल्यास, त्या स्पष्टपणे सांगा. काहिक त्रुटी आढळल्यास, कृपया विभाग क्रमांक व काहिक संबंधित मजकुर पाठवा ज्यामुळे समस्या शोधण्यास आम्हाला पटकण मदत मिळेल."
