--- a/publican-jboss/pa-IN/Feedback.po
+++ b/publican-jboss/pa-IN/Feedback.po
@@ -1,43 +1,113 @@
 # translation of Feedback.po to Punjabi
-# Jaswinder Singh <jsingh@redhat.com>, 2007.
+# Jaswinder Singh <jsingh@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-30 11:59+0530\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-31 14:48+0530\n"
 "Last-Translator: Jaswinder Singh <jsingh@redhat.com>\n"
-"Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
+"Language-Team: Punjabi/Panjabi <kde-i18n-doc@kde.org>\n"
 "Language: pa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "ਮਦਦ ਲੈਣੀ ਅਤੇ ਸੁਝਾਅ ਦੇਣੇ"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "ਕੀ ਤੁਹਾਨੂੰ ਮਦਦ ਚਾਹੀਦੀ ਹੈ?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>ਮਦਦ</primary> <secondary>ਮਦਦ ਲੈਣੀ</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ ਵਿੱਚ ਦਿੱਤੇ ਮੁਤਾਬਕ ਮੁਸ਼ਕਿਲ ਸਮਝਦੇ ਹੋ, ਤਾਂ Red Hat ਗਾਹਕ ਪੋਰਟਲ <ulink url=\"http://access.redhat.com\" /> ਉੱਪਰ ਵੇਖੋ। ਗਾਹਕ ਪੋਰਟਲ ਰਾਹੀਂ, ਤੁਸੀਂ ਇਹ ਕਰ ਸਕਦੇ ਹੋ:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "Red Hat ਉਤਪਾਦ ਬਾਰੇ ਤਕਨੀਕੀ ਸਹਿਯੋਗ ਲੇਖ ਦੇ ਨਾਲੇਜਬੇਸ ਦੁਆਰਾ ਖੋਜੋ ਅਤੇ ਵੇਖੋ।"
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat Global Support Services (GSS) ਨੂੰ ਇੱਕ ਸਹਿਯੋਗ ਮੁੱਦਾ ਭੇਜੋ।"
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "ਹੋਰ ਉਤਪਾਦ ਦਸਤਾਵੇਜ ਵੇਖੋ।"
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat ਬਹੁਤ ਸਾਰੀਆਂ ਮੇਲਿੰਗ ਲਿਸਟਾਂ ਵੀ ਹੋਸਟ ਕਰਦਾ ਹੈ ਜਿਨਾਂ ਉੱਪਰ Red Hat ਸਾਫਟਵੇਅਰ ਅਤੇ ਟੈਕਨਾਲੋਜੀ ਬਾਰੇ ਗੱਲਬਾਤ ਹੁੰਦੀ ਹੈ। ਤੁਸੀਂ ਪਬਲਿਕ ਤੌਰ ਤੇ ਉਪਲੱਬਧ ਲਿਸਟ <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> ਉੱਪਰ ਲੱਭ ਸਕਦੇ ਹੋ। ਲਿਸਟ ਤੇ ਮੈਂਬਰ ਬਣਨ ਲਈ ਜਾਂ ਲਿਸਟ ਆਰਚੀਵ ਵੇਖਣ ਲਈ ਮੇਲਿੰਗ ਲਿਸਟ ਦੇ ਨਾਂ ਤੇ ਕਲਿੱਕ ਕਰੋ।"
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "ਸਾਨੂੰ ਫੀਡਬੈਕ ਦੀ ਲੋੜ ਹੈ!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>ਸੁਝਾਅ</primary> <secondary>ਇਸ ਦਸਤਾਵੇਜ ਲਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਟਾਈਪੋਗਰਾਫੀਕਲ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਜਾਂ ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਵਧੀਆਂ ਬਣਾ ਸਕਦੇ ਹੋ, ਤਾਂ ਅਸੀਂ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੀ ਕਦਰ ਕਰਦੇ ਹਾਂ! ਕਿਰਪਾ ਕਰਕੇ ਬੱਗਜ਼ੀਲਾ ਵਿੱਚ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰੋ: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "ਬੱਗ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰਨ ਸਮੇਂ, ਦਸਤਾਵੇਜ਼ ਦੇ ਪਛਾਣਕਾਰ ਦਾ ਵੇਰਵਾ ਦਿਓ: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "ਜੇ ਤੁਸੀਂ ਦਸਤਾਵੇਜ਼ੀ ਵਿੱਚ ਸੋਧ ਬਾਰੇ ਸੁਝਾਅ ਹਨ, ਤਾਂ ਵਿਸ਼ੇਸ਼ ਸੁਝਾਅ ਹੀ ਦਿਓ। ਜੇ ਤੁਸੀਂ ਕੋਈ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਸ਼ੈਕਸ਼ਨ ਨੰਬਰ ਅਤੇ ਕੁਝ ਪਾਠ ਸ਼ਾਮਿਲ ਕਰੋ ਤਾਂ ਕਿ ਅਸੀਂ ਇਸ ਨੂੰ ਅਸਾਨੀ ਨਾਲ ਲੱਭ ਸਕੀਏ।"
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਟਾਈਪੋਗਰਾਫੀਕਲ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਜਾਂ ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਵਧੀਆਂ ਬਣਾ ਸਕਦੇ ਹੋ, ਤਾਂ ਅਸੀਂ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੀ ਕਦਰ ਕਰਦੇ ਹਾਂ! ਕਿਰਪਾ ਕਰਕੇ ਬੱਗਜ਼ੀਲਾ ਵਿੱਚ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰੋ: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "ਬੱਗ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰਨ ਸਮੇਂ, ਦਸਤਾਵੇਜ਼ ਦੇ ਪਛਾਣਕਾਰ ਦਾ ਵੇਰਵਾ ਦਿਓ: <citetitle>&BOOKID;</citetitle>"
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "ਜੇ ਤੁਸੀਂ ਦਸਤਾਵੇਜ਼ੀ ਵਿੱਚ ਸੋਧ ਬਾਰੇ ਸੁਝਾਅ ਹਨ, ਤਾਂ ਵਿਸ਼ੇਸ਼ ਸੁਝਾਅ ਹੀ ਦਿਓ। ਜੇ ਤੁਸੀਂ ਕੋਈ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਸ਼ੈਕਸ਼ਨ ਨੰਬਰ ਅਤੇ ਕੁਝ ਪਾਠ ਸ਼ਾਮਿਲ ਕਰੋ ਤਾਂ ਕਿ ਅਸੀਂ ਇਸ ਨੂੰ ਅਸਾਨੀ ਨਾਲ ਲੱਭ ਸਕੀਏ।"
 
 #~ msgid "feedback"
 #~ msgstr "ਫੀਡਬੈਕ"
