--- a/publican-jboss/pt-BR/Feedback.po
+++ b/publican-jboss/pt-BR/Feedback.po
@@ -1,14 +1,15 @@
-# translation of Feedback.po to Brazilian Portuguese
+# translation of Feedback.po to
 # Leticia de Lima <ldelima@redhat.com>, 2007.
+# Glaucia Cintra <gcintra@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-23 14:26+1000\n"
-"Last-Translator: Leticia de Lima <ldelima@redhat.com>\n"
-"Language-Team: Brazilian Portuguese <en@li.org>\n"
-"Language: pt_BR\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-23 12:28+1000\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,34 +17,94 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
-msgstr "Nós precisamos de seu comentário"
+msgid "Getting Help and Giving Feedback"
+msgstr "Obtendo Ajuda e Fornecendo Comentários"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "Você precisa de ajuda?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>ajuda</primary> <secondary>obtendo ajuda</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "Se encontrar dificuldades com o procedimento descrito nesta documentação, você pode encontrar ajuda visitando o Portal do Cliente da Red Hat em <ulink url=\"http://access.redhat.com\" />. Você poderá realizar o seguinte através do portal do cliente:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "realize buscas ou navegue através da base de conhecimento dos artigos de suporte técnico sobre os produtos da Red Hat."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "insira o caso de suporte nos Serviços de Suporte Global da Red Hat (GSS)."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "acesso a outra documentação da Red Hat."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "A Red Hat acomoda um grande número de listas de correio eletrônico para discussão de software e tecnologias da Red Hat. Você pode encontrar uma lista contendo as listas públicas disponíveis em <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Clique no nome de qualquer lista para subscrever àquela lista ou acessar o histórico das listas."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
+msgstr "Nós precisamos do seu Comentário!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>comentário</primary> <secondary>informação de contato para este manual</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> contra o produto <application>&PRODUCT;.</application>."
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "Uma vez submetendo um relatório de bug, por favor mencione a identificação do manual:<citetitle>&BOOKID;</citetitle>."
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Se você tiver uma sugestão para o melhoramento deste documento, por favor tente ser o mais específico possível em sua descrição. Caso você tenha encontrado um erro, por favor inclua o número da seção e alguns detalhes a respeito do texto para a nossa melhor identificação."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> contra o produto <application>&PRODUCT;.</application>."
 
-#~ msgid "feedback"
-#~ msgstr "comentário"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "Ao submeter um relatório de erro, certifique-se de mencionar a identificação do manual:<citetitle>&BOOKID;</citetitle>."
 
-#~ msgid "contact information for this manual"
-#~ msgstr "contato de informação para este manual"
-
-#~ msgid "translator-credits"
-#~ msgstr "créditos do tradutor"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "Se você tiver uma sugestão para o melhoramento deste documento, por favor tente ser o mais específico possível em sua descrição. Caso você tenha encontrado um erro, por favor inclua o número da seção e alguns detalhes a respeito do texto para a nossa melhor identificação."
