--- a/publican-jboss/ru-RU/Feedback.po
+++ b/publican-jboss/ru-RU/Feedback.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
 "PO-Revision-Date: 2010-08-23 12:07+1000\n"
 "Last-Translator: Yulia <ypoyarko@redhat.com>\n"
 "Language-Team: Russian\n"
@@ -20,7 +20,47 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "Получение помощи и обратная связь"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "Нужна помощь?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>помощь</primary> <secondary>получение помощи</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "Если вы столкнулись с проблемами при выполнении инструкций, описанных в этом документе, помощь можно получить через портал пользователей Red Hat (<ulink url=\"http://access.redhat.com\" />). Там вы сможете:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "выполнить поиск или просмотреть технические статьи в базе знаний продуктов Red Hat;"
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "отправить запрос в службу глобальной поддержки Red Hat;"
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "получить доступ к другой официальной документации."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Существует множество почтовых рассылок Red Hat на разные темы, включая программное обеспечение и обсуждение технологий. Полный список можно найти по адресу <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Чтобы просмотреть информацию об интересующей рассылке и подписаться на нее, нажмите на ее названии."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "Нам нужны ваши отзывы!"
 
 #. Tag: indexterm
@@ -30,15 +70,44 @@ msgstr "<primary>отзывы</primary> <secondary>контактная инфо
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы хотели бы об этом узнать. Создайте запрос в Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</application>"
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "Не забудьте указать в запросе идентификатор данного руководства: <citetitle>&BOOKID;</citetitle>."
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Если у вас есть предложения по улучшению этого руководства, постарайтесь описать их как можно подробнее. Если же вы нашли ошибку, пожалуйста, укажите номер раздела и окружающий текст для облегчения ее идентификации."
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
+
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы хотели бы об этом узнать. Создайте запрос в Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</application>"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "Не забудьте указать в запросе идентификатор данного руководства: <citetitle>&BOOKID;</citetitle>."
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "Если у вас есть предложения по улучшению этого руководства, постарайтесь описать их как можно подробнее. Если же вы нашли ошибку, пожалуйста, укажите номер раздела и окружающий текст для облегчения ее идентификации."
