--- a/publican-jboss/si-LK/Feedback.po
+++ b/publican-jboss/si-LK/Feedback.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
 "PO-Revision-Date: 2007-10-30 15:16+0530\n"
 "Last-Translator: Danishka Navin <snavin@redhat.com>\n"
 "Language-Team: Sinhala <en@li.org>\n"
@@ -17,7 +17,47 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr ""
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr ""
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "අපට ප්‍රථිචාර අවශ්‍යයි!"
 
 #. Tag: indexterm
@@ -27,18 +67,47 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස සැකසීමට අදහසක් ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: <application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>"
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: <citetitle>&BOOKID;</citetitle>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "මෙම ප්‍රලේඛනය දියුණු කිරීම සඳහා ඔබට යෝජනා ඇත්නම් එය විස්තර කිරීමෙදි හැකිතරම් විශේෂිතව දැක්වීමට උත්සාහ කරන්න. ඔබට දෝෂයක් හමුවුවහොත් කරුණාකර අංශයේ අංකය සහ අදාලා පෙදෙසේ වචන ස්වල්පයක් එක්කරන්න, එවිට අපහට එය පහසුවෙන් හදුනා ගත හැක."
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
+
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස සැකසීමට අදහසක් ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: <application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>"
+
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: <citetitle>&BOOKID;</citetitle>"
+
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "මෙම ප්‍රලේඛනය දියුණු කිරීම සඳහා ඔබට යෝජනා ඇත්නම් එය විස්තර කිරීමෙදි හැකිතරම් විශේෂිතව දැක්වීමට උත්සාහ කරන්න. ඔබට දෝෂයක් හමුවුවහොත් කරුණාකර අංශයේ අංකය සහ අදාලා පෙදෙසේ වචන ස්වල්පයක් එක්කරන්න, එවිට අපහට එය පහසුවෙන් හදුනා ගත හැක."
 
 #~ msgid "feedback"
 #~ msgstr "ප්‍රථිචාරය"
