--- a/publican-jboss/te-IN/Feedback.po
+++ b/publican-jboss/te-IN/Feedback.po
@@ -1,11 +1,11 @@
 # translation of Feedback.po to Telugu
-# Krishna Babu K <kkrothap@redhat.com>, 2007.
+# Krishna Babu K <kkrothap@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-29 17:40+0530\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-09-06 12:44+0530\n"
 "Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
 "Language-Team: Telugu <en@li.org>\n"
 "Language: te\n"
@@ -13,37 +13,100 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
+"\n"
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "సహాయాన్ని పొందుట మరియు ప్రతిస్పందనను తెలుపుట"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "మీకు సహాయం కావలెనా?"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>సహాయం</primary> <secondary>సహాయం పొందుట</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "ఈ పత్రికీకరణ నందు వివరించిన విధానమునందు మీరు సంక్లిష్టతను యెదుర్కొంటే, Red Hat వినియోగదారి పోర్టల్‌ను <ulink url=\"http://access.redhat.com\" /> వద్ద దర్శించండి. వినియోగదారి పోర్టల్ ద్వారా మీరు యివి చేయవచ్చును:"
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "Red Hat వుత్పత్తుల గురించి సాంకేతిక మద్దతును అందించు వ్యాసముల యొక్క జ్ఞానభాండాగారము(నాలెడ్జుబేస్) నందు మీరు శోధించవచ్చు లేదా బ్రౌజ్ చేయవచ్చు."
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "Red Hat గ్లోబల్ సపోర్ట్ సర్వీసెస్ (GSS) మద్దతుకు కేస్ అప్పగించవచ్చును."
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "ఇతర వుత్పత్తి పత్రికీకరణను యాక్సెస్ చేయవచ్చును."
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat సాఫ్టువేర్ మరియు సాంకేతికతను చర్చించుట కొరకై Red Hat యెక్కువ సంఖ్యలో యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్ వుంచును. పబ్లిక్‌గా అందుబాటులో వున్న జాబితా(లిస్ట్)లను మీరు <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> వద్ద కనుగొనగలరు. జాబితానందు జేరుటకు లేదా జాబితా యొక్క అర్చీవ్‌లను యాక్సెస్ చేయుటకు జాబితా యొక్క నామముపై నొక్కుము."
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "మాకు మీ ప్రతిస్పందన అవసరం!"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>స్పందన</primary> <secondary>ఈ మాన్యువల్ వుద్దేశించి సంప్రదించుటకు సమాచారము</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "మీరు ఈ చేతి పుస్తకం నందు టైపోగ్రాఫికల్ దోషాన్ని గాని, లేదా మీరు ఈ చేతిపుస్తకం ను ఇంకా బాగా తయారుచేసే మార్గం ఆలోచించిన, మీరు చెప్పింది వినుటకు మేము ఇష్టపడతాము.దయచేసి నివేదికను Bugzilla లో ఉంచండి: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>ఉత్పత్తి కి విరుద్దంగా<application>&PRODUCT;.</application>"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "బగ్ ను అప్పగించు నప్పుడు,ఖచ్చితంగా చేతిపుస్తకం గుర్తింపును తెలియపరుచుట మరువవద్దు: <citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "మీరు పత్రికీకరణ మెరుగుదల కొరకు సలహా కలిగిఉంటే,దానిని వివరించేటప్పుడు సాద్యమైనంత వరకు ప్రత్యేకంగా ప్రయత్నించండి.మీరు ఒక దోషాన్ని కనుగొన్నట్లైతే,దయచేసి విభాగం సంఖ్య మరియు దాని చుట్టూఉన్న టెక్స్టును కలపండి అప్పుడు మేము సులభంగా కనుగొనకలుగుతాము."
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "మీరు ఈ చేతి పుస్తకం నందు టైపోగ్రాఫికల్ దోషాన్ని గాని, లేదా మీరు ఈ చేతిపుస్తకం ను ఇంకా బాగా తయారుచేసే మార్గం ఆలోచించిన, మీరు చెప్పింది వినుటకు మేము ఇష్టపడతాము.దయచేసి నివేదికను Bugzilla లో ఉంచండి: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>ఉత్పత్తి కి విరుద్దంగా<application>&PRODUCT;.</application>"
 
-#~ msgid "feedback"
-#~ msgstr "ప్రతిస్పందన"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "బగ్ నివేదికను అప్పగించునప్పుడు, ఖచ్చితంగా చేతిపుస్తకం గుర్తింపును తెలియపరుచుట మరువవద్దు: <citetitle>&BOOKID;</citetitle>"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "ఈ చేతి పుస్తకం కొరకు సంభందిత సమాచారం"
-
-#~ msgid "translator-credits"
-#~ msgstr "KrishnaBabu k <kkrothap@redhat.com> 2007"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "మీరు పత్రికీకరణ మెరుగుదల కొరకు సలహా కలిగిఉంటే,దానిని వివరించేటప్పుడు సాద్యమైనంత వరకు యెంత వీలైతే అంత నిర్ధిష్టంగా వివరించుటకు ప్రయత్నించుము. మీరు ఒక దోషాన్ని కనుగొన్నట్లైతే,దయచేసి విభాగం సంఖ్య మరియు దాని చుట్టూవున్న టెక్స్టును కలపండి అప్పుడు మేము సులభంగా కనుగొనకలుగుతాము."
