--- a/publican-jboss/zh-TW/Feedback.po
+++ b/publican-jboss/zh-TW/Feedback.po
@@ -1,13 +1,14 @@
-# translation of Feedback.po to Traditional Chinese
+# translation of Feedback.po to
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
+# Chester Cheng <ccheng@紅帽子>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-08T02:39:25\n"
-"PO-Revision-Date: 2007-10-23 17:06+1000\n"
-"Last-Translator: Terry Chuang <terry.chuang@redhat.com>\n"
-"Language-Team: Traditional Chinese <zh-TW@li.org>\n"
+"POT-Creation-Date: 2011-06-09T03:27:07\n"
+"PO-Revision-Date: 2010-08-23 11:36+1000\n"
+"Last-Translator: \n"
+"Language-Team:  <zh@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,34 +17,94 @@ msgstr ""
 
 #. Tag: title
 #, no-c-format
-msgid "We Need Feedback!"
+msgid "Getting Help and Giving Feedback"
+msgstr "取得幫助，提供意見"
+
+#. Tag: title
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr "需要幫助嗎？"
+
+#. Tag: indexterm
+#, no-c-format
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
+msgstr "<primary>說明</primary> <secondary>取得協助</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgstr "如果您無法進行本文件中所描述的步驟，請參閱 Red Hat Customer Portal 於 <ulink url=\"http://access.redhat.com\" />。您可透過此客戶端頻道來進行以下動作："
+
+#. Tag: para
+#, no-c-format
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
+msgstr "搜尋或瀏覽有關於 Red Hat 產品的技術支援文件知識庫。"
+
+#. Tag: para
+#, no-c-format
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
+msgstr "提交支援案例至 Red Hat 全球支援服務（GSS）。"
+
+#. Tag: para
+#, no-c-format
+msgid "access other product documentation."
+msgstr "存取其它產品的文件。"
+
+#. Tag: para
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgstr "Red Hat 擁有許多電子郵件清單，以討論 Red Hat 的軟體與技術。您可以藉由 <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> 找到公開的郵件清單。請按下郵件清單的名稱，以選擇訂閱或檢視過去的清單紀錄。"
+
+#. Tag: title
+#, fuzzy, no-c-format
+msgid "Give us Feedback"
 msgstr "我們需要您的意見！"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>意見</primary> <secondary>本指南的聯絡資訊</secondary>"
+
+#. Tag: para
+#, no-c-format
+msgid "If you find a typographical error, or know how this guide can be improved, we would love to hear from you. Submit a report in Bugzilla against the product <literal>&BZPRODUCT;</literal> and the component <literal>&BZCOMPONENT;</literal>. The following link will take you to a pre-filled bug report for this product: &BZURL;."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中對於 <application>&PRODUCT;.</application> 這個產品提交您的報表：<ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>。"
+msgid "Fill out the following template in Bugzilla's <literal>Description</literal> field. Be as specific as possible when describing the issue; this will help ensure that we can fix it quickly."
+msgstr ""
+
+#. Tag: screen
+#, no-c-format
+msgid ""
+"Document URL:\n"
+"\n"
+"\n"
+"Section Number and Name:\n"
+"\n"
+"\n"
+"Describe the issue:\n"
+"\n"
+"\n"
+"Suggestions for improvement:\n"
+"\n"
+"\n"
+"Additional information:\n"
+"\n"
+"\n"
+msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "當您提交錯誤報告時，請務必提供指南的識別碼：<citetitle>&BOOKID;</citetitle>"
+msgid "Be sure to give us your name so that you can receive full credit for reporting the issue."
+msgstr ""
 
-#. Tag: para
-#, no-c-format
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "若您擁有改善文件的建議，請儘可能地將它詳細描述清楚。若您您發現錯誤的話，請包含區段編號以及該錯誤周圍的部分文字，如此一來我們便能輕易地找到該錯誤。"
+#~ msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#~ msgstr "若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中針對於 <application>&PRODUCT;.</application> 這個產品提交您的回報：<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>。"
 
-#~ msgid "feedback"
-#~ msgstr "意見"
+#~ msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#~ msgstr "當您提交錯誤報告時，請務必提供指南的識別碼：<citetitle>&BOOKID;</citetitle>"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "本指南的連絡人資訊"
-
-#~ msgid "translator-credits"
-#~ msgstr "譯者姓名︰莊佳儒（Terry Chuang）2007"
+#~ msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#~ msgstr "若您擁有改善文件的建議，請儘可能地將它詳細描述清楚。若您您發現錯誤的話，請包含區段編號以及該錯誤周圍的部分文字，如此一來我們便能輕易地找到該錯誤。"
